--- a/app/views/product.jade
+++ b/app/views/product.jade
@@ -3,23 +3,20 @@ extends base
 block content
 	br
 	.row
-		.col-9
+		.col-lg-11.col-md-11.col-sm-11
 			h3.text-center Hello ! #{user.userName}
-		.col-3
+		.col-lg-1.col-md-1.col-sm-1
 			button.btn.btn-primary.btn-block
 				a(href='/users/logout') Logout
 	br
 	.container-fluid
 		.row
-			.col-lg-3.col-md-3.col-sm-3.text-center.btn
+			.col-lg-4.col-md-4.col-sm-4.text-center.btn
 				.btn.btn-lg.btn-primary.btn-block
 					a(style="color:black;text-decoration:none;")(href='/users/proInfo') Add Product
-			.col-lg-3.col-md-3.col-sm-3.text-center.btn
+			.col-lg-4.col-md-4.col-sm-4.text-center.btn
 					form(method='post',action='http://localhost:3000/users/viewPro')
 						button.btn.btn-block.btn-lg.btn-primary(style="color:black;")(type='submit') View Product
-			.col-lg-3.col-md-3.col-sm-3.text-center.btn
+			.col-lg-4.col-md-4.col-sm-4.text-center.btn
 				form(method="post", action="http://localhost:3000/users/viewCart/#{user._id}")
 					button.btn.btn-lg.btn-primary.btn-block View Cart
-			.col-lg-3.col-md-3.col-sm-3.text-center.btn
-				.btn.btn-lg.btn-primary.btn-block
-					a(style="color:black;text-decoration:none;")(href='/users/proInfo') Your Order
