--- a/app/views/base.jade
+++ b/app/views/base.jade
@@ -8,6 +8,8 @@ html
       script(src='https://code.jquery.com/jquery-3.1.1.slim.min.js', integrity='sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n', crossorigin='anonymous')
       script(src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js', integrity='sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb', crossorigin='anonymous')
       script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js', integrity='sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn', crossorigin='anonymous')
+      script(src='https://code.jquery.com/jquery-3.2.1.js', integrity='sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=', crossorigin='anonymous')
+      link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
 
   body
     nav.navbar.navbar-toggleable-md.navbar-inverse.bg-inverse
@@ -19,13 +21,13 @@ html
       #navbarNavDropdown.collapse.navbar-collapse
         ul.navbar-nav
           li.nav-item
-            a.nav-link(href='#')
+            a.nav-link(href='/users/index')
               | Home 
               span.sr-only (current)
           |       
           li.nav-item
             form.nav-link(method='post', action='http://localhost:3000/users/viewPro')
-              button(style="background:none:text-decoration:none;background-color:black;")(type='submit') View Product
+              button(type='submit') View Product
           |       
           li.nav-item
             a.nav-link(href='#') Pricing
