--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -48,3 +48,7 @@ block content
                       .col-9
                         input.text-center.form-control(type='password',name='password')
                     button.btn.btn-block.btn-lg(type='submit') LogIn
+    form
+      a(href="#", value='Go back!',onclick='history.back()')
+      input.btn.btn-primary(type='button', value='Go back!', onclick='history.back()')
+      i.fa.fa-chevron-left(aria-hidden='true')
