--- a/app/views/viewPro.jade
+++ b/app/views/viewPro.jade
@@ -19,7 +19,7 @@ block content
 									p Price &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: &nbsp;#{pro.price}/-
 								.col-lg-12.col-md-12.col-sm-12
 									p Product Description : 
-									br 
+									br
 									p #{pro.comment}
 					.card-footer
 						.row.text-center
@@ -27,7 +27,7 @@ block content
 								form(method="post",action="http://localhost:3000/users/addCart/#{pro._id}")
 									button.btn.btn-primary.btn-lg Add To Cart
 							.col-lg-4.col-md-4.col-sm-4
-								a(href="/users/editPro/#{pro._id}")
+								a(href="/users/edit/#{pro._id}")
 									button.btn.btn-primary.btn-lg Edit Info
 							.col-lg-4.col-md-4.col-sm-4
 								form(method="post",action="http://localhost:3000/users/deletePro/#{pro._id}")
