--- a/app/views/viewPro.jade
+++ b/app/views/viewPro.jade
@@ -19,7 +19,7 @@ block content
 									p Price &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: &nbsp;#{pro.price}/-
 								.col-lg-12.col-md-12.col-sm-12
 									p Product Description : 
-									br
+									brss
 									p #{pro.comment}
 					.card-footer
 						.row.text-center
