--- a/app/views/css/style.css
+++ b/app/views/css/style.css
@@ -1,12 +1,3 @@
-a{
-	text-decoration: none;
-}
-.card{
-	border: none;
-}
 body{
-	background-color: green;
-}
-.user{
-	color: blue;
+	font-family: arial;
 }
