--- a/app/views/base.jade
+++ b/app/views/base.jade
@@ -12,34 +12,35 @@ html
       script(src='https://code.jquery.com/jquery-3.2.1.js', integrity='sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=', crossorigin='anonymous')
       link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
       //- link(href='/css/style.css',rel='stylesheet')
-        
+      
   body
-    nav.navbar.navbar-toggleable-md.navbar-inverse.bg-inverse
+    nav.navbar.navbar-toggleable-sm.navbar-inverse.bg-inverse
       button.navbar-toggler.navbar-toggler-right(type='button', data-toggle='collapse', data-target='#navbarNavDropdown', aria-controls='navbarNavDropdown', aria-expanded='false', aria-label='Toggle navigation')
         span.navbar-toggler-icon
       |   
-      a.navbar-brand(href='/users/index') eCart
+      a.navbar-brand.brand(href='/users/index') eCart
       |   
       #navbarNavDropdown.collapse.navbar-collapse
-        ul.navbar-nav
+        ul.navbar-nav.ml-auto
           li.nav-item
-            a.nav-link(href='/users/index')
-              | Home 
-              span.sr-only (current)
+            a.nav-link(href='#')
+              block page
           |      
           li.nav-item
-            a.nav-link(href='#') Products
-          |       
-          li.nav-item.dropdown
-            a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='#', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
-              | User
-            |         
-            .dropdown-menu(aria-labelledby='navbarDropdownMenuLink')
-              a.dropdown-item(href='#') Action
-              |           
-              a.dropdown-item(href='#') Another action
-              |           
-              a.dropdown-item(href='#') Something else here
+            p.text-center.mt-3
+              block logout
+          //- |       
+          //- li.nav-item.dropdown
+          //-   a#navbarDropdownMenuLink.nav-link(href='#', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+          //-      block page
+            //- |         
+            //- .dropdown-menu(aria-labelledby='navbarDropdownMenuLink')
+            //-   block page
+            //-   a.dropdown-item(href='#') Action
+            //-   |           
+            //-   a.dropdown-item(href='#') Another action
+            //-   |           
+            //-   a.dropdown-item(href='#') Something else here
     .container.mt-3.text-center
       if messages.error
         .alert.alert-danger
@@ -53,7 +54,8 @@ html
         .alert.alert-success
           strong
             div= messages.success
-    block content
+    .container-fluid
+      block content
     block footer
       footer
         hr
