--- a/app/views/proInfo.jade
+++ b/app/views/proInfo.jade
@@ -2,38 +2,42 @@ extends base
 
 block content
 	h3.text-center Add Product
-	form.text-center.mt-2(method='post', action='http://localhost:3000/users/proInfo')
-		.form-group.row
-			label.col-3(for='proName') Product Name
-			.col-4
-				input.form-control(type='text', name='proName', placeholder='Laptop')
-		.form-group.row
-			label.col-3(for='category') Category
-			.col-4
-				select.form-control(name='category')
-					option Mobile
-					option TV
-					option Jewellery
-					option Laptop
-					option Footweear
-					option Clothes
-					option Accessories
-					option Furnitures
-					option Kitchen
-		.form-group.row
-			label.col-3(for='price') Price
-			.col-4
-				input.form-control(type='number', name='price',min="1", max="99999", placeholder='Amount')
-		.form-group.row
-			label.col-3(for='model') Model
-			.col-4
-				input.form-control(type='text', name='model', placeholder='Laptop')
-		.form-group.row
-			label.col-3(for='seller') Seller
-			.col-4
-				input.form-control(type='text', name='seller', placeholder='Xyz Abc')
-		.form-group.row
-			label.col-3(for='comment') Product Description
-			.col-4
-				textarea(type='text',rows='4', cols='52',name='comment',form='unform',placeholder='Enter Product Description')
-		button.btn.btn-primary.btn-block(type="submit") Submit
+	hr(style="height:1.5px;width:75em;border:none;color:#00a51e;background-color:#00a51e;")
+	.container-fluid
+		.row
+			.col-12
+				form.mt-2.text-center(method='post', action='http://localhost:3000/users/proInfo')
+					h5.mr-auto.form-group Product Name :
+					.container
+						input.form-control.col-12.m-auto.text-center(style="width:48em;")(type='text',name='proName')
+					br
+					h5.mr-auto.form-group Category :
+					.container
+						select.form-control.col-12.m-auto(style="width:48em;")(name='category')
+							option Mobile
+							option TV
+							option Jewellery
+							option Laptop
+							option Footwear
+							option Clothes
+							option Accessories
+							option Furnitures
+							option Kitchen
+					br
+					h5.mr-auto.form-group Price :
+					.container
+						input.form-control.col-12.m-auto.text-center(style="width:48em;")(type='number',name='price')
+					br
+					h5.mr-auto.form-group Model :
+					.container
+						input.form-control.col-12.m-auto.text-center(style="width:48em;")(type='text',name='model')
+					br
+					h5.mr-auto.form-group Seller :
+					.container
+						input.form-control.col-12.m-auto.text-center(style="width:48em;")(type='text',name='seller')
+					br
+					h5.mr-auto.form-group Description :
+					.container
+						input.form-control.col-12.m-auto.text-center(style="width:48em;")(type='text',name='descrip')
+					br
+					button.btn.btn-lg(style="background-color:#00a51e;width:20em;") Save
