--- a/app/views/viewCart.jade
+++ b/app/views/viewCart.jade
@@ -5,14 +5,12 @@ block content
 		thead
 			tr
 				th Products
-				th Quantity
 				th Price
 				th Delete
 		tbody
-			each item, index in items
+			for item in items
 				tr
 					td #{item.proName}
-					td #{index+1}
 					td #{item.price}
 					td
 						form(method="post", action="http://localhost:3000/users/delete/#{item._id}")
